--- a/notebooks/Access Example.ipynb
+++ b/notebooks/Access Example.ipynb
@@ -68,7 +68,7 @@
        "</ol>"
       ],
       "text/plain": [
-       "<metapack.doc.MetapackDoc at 0x10de4f780>"
+       "<metapack.doc.MetapackDoc at 0x10f55f2e8>"
       ]
      },
      "execution_count": 1,
